2017-11-23  Darin Adler  <darin@apple.com>

        Fix dictionary leak in lookup, convert FindOptions to OptionSet, tweak code style nearby
        https://bugs.webkit.org/show_bug.cgi?id=179981

        Reviewed by Sam Weinig.

        * WebProcess/Plugins/PDF/PDFPlugin.h: Use some references instead of pointers. Made more
        things final and private. Changed functions with multiple return values to use tuples
        instead of out arguments for clarity, especially because some were using pointers and it
        was ambiguous whether the pointers could be nullptr. Tweaked formatting. Moved initialization
        of data members into the class definition.

        * WebProcess/Plugins/PDF/PDFPlugin.mm:
        (WebKit::PDFPlugin::create): Take a reference.
        (WebKit::PDFPlugin::PDFPlugin): Ditto. Also moved some initialization to the class definition.
        (WebKit::PDFPlugin::countFindMatches): Added comment about ignored maxMatchCount argument.
        (WebKit::PDFPlugin::findString): Use contains instead of & to check bits in options.
        Simplified slightly confusing match count code that was doing some unnecessary comparisons
        with the maximum match count. Use auto a bit.
        (WebKit::coreCursor): Renamed from pdfLayerControllerCursorTypeToCursor since this is C++
        and overloading works based on the argument type.
        (WebKit::PDFPlugin::notifyCursorChanged): Updated for name change.
        (WebKit::PDFPlugin::lookupTextAtLocation const): Return a tuple instead of using two out
        arguments and use a RetainPtr so we don't leak the options dictionary.

        * WebProcess/Plugins/PluginProxy.h: Removed unneeded include of FindOptions.h.

        * WebProcess/WebCoreSupport/mac/WebContextMenuClientMac.mm:
        (WebKit::WebContextMenuClient::lookUpInDictionary): Pass a reference.

        * WebProcess/WebPage/FindController.cpp:
        (WebKit::core): Use |= instead of | to build up a FindOptions.