@@ -3,8 +3,9 @@ exec_prefix=${prefix}
 libdir=@LIB_INSTALL_DIR@
 includedir=${prefix}/include
 
-Name: WebKit2WebExtension
-Description: WebKit web process extensions
+Name: WebKitGTK+ Web process extensions
+Description: Web content engine for GTK+ - Web process extensions
+URL: https://webkitgtk.org
 Version: @PROJECT_VERSION@
 Requires: glib-2.0 gtk+-3.0 libsoup-2.4 javascriptcoregtk-@WEBKITGTK_API_VERSION@
 Libs: -L${libdir} -lwebkit2gtk-@WEBKITGTK_API_VERSION@
