@@ -3,8 +3,9 @@ exec_prefix=${prefix}
 libdir=@LIB_INSTALL_DIR@
 includedir=${prefix}/include
 
-Name: WebKit2
-Description: WPE-flavored Web engine
+Name: WPE WebKit
+Description: Embeddable Web content engine
+URL: https://wpewebkit.org
 Version: @PROJECT_VERSION@
 Requires: glib-2.0 libsoup-2.4
 Libs: -L${libdir} -lWPEWebKit
