@@ -1,3 +1,14 @@
+2017-11-27  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [WPE][GTK] Improve contents of pkg-config .pc files
+        https://bugs.webkit.org/show_bug.cgi?id=180032
+
+        Reviewed by Carlos Garcia Campos.
+
+        * gtk/webkit2gtk-web-extension.pc.in: Add URL, edit Name and Description.
+        * gtk/webkit2gtk.pc.in: Add URL, edit Name.
+        * wpe/wpe-webkit.pc.in: Add URL, edit Name and Description.
+
 2017-11-23  Darin Adler  <darin@apple.com>
 
         Fix dictionary leak in lookup, convert FindOptions to OptionSet, tweak code style nearby
